# avys

./: .gitignore  Cargo.toml  README.md  README.txt  idea.txt  readme.txt
assets/data/: biomes.ron  blocks.ron  config.ron  splash_text.txt
assets/data/structures/: basalt_temple.ron
assets/data/terrain_types/: archipelago.ron  ocean.ron  wastelands.ron
src/: animation.rs  config.rs  data.rs  game.rs  main.rs  player.rs  rotate_to_cursor.rs  splash_text.rs
src/ambiance/: birds.rs  mod.rs  music.rs
src/enemy/: mod.rs
src/entity/: dash.rs  mod.rs  movement.rs
src/gui/: debug.rs  debug_ui.rs  hotbar.rs  hud.rs  mod.rs
src/level/: biome.rs  block.rs  build.rs  chunk.rs  infinite.rs  mod.rs
src/level/biome/: basalt_ridge.rs  desert.rs  flat_lands.rs  mod.rs  moss_gardens.rs
src/level/biomes/: basalt_ridge.rs  biome.rs  mod.rs  moss_garden.rs
src/level/structure/: basalt_temple.rs  mod.rs
src/mechanics/: avys.rs  mod.rs
src/personality/: mod.rs  personality_manager.rs
src/player/: controls.rs  highlight.rs  input.rs  interaction.rs  mod.rs  movement.rs  player_commands.rs
src/ui/: hud.rs  mod.rs
src/ui/chat/: message.rs  mod.rs
src/world/: build.rs  generation.rs  mod.rs  terrain_type.rs  world_commands.rs
