[package]
name = "avys"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = [ "wav" ] }
bevy_rapier2d = "0.30.0"
lerp = "0.5.0"
noise = "0.9.0"
rand = "0.9.1"
ron = "0.10.1"
serde = "1.0.219"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
